test/spec_vectors/align/ok/module_6.wat
(module (memory 0) (func (drop (i64.load8_u align=1 (i32.const 0)))))