test/spec_vectors/align/fail/module_79.wat
(module (memory 0) (func (drop (i64.load32_u align=8 (i32.const 0)))))